# tokenhub-agent

./: .env.example  .gitignore  README.md  pyproject.toml
agent/: cli.py  config.py  graph.py  react.py  session.py  state.py
agent/debug/: info_all.py
agent/llm/: base.py  claude.py  openai.py  registry.py
agent/memory/: __init__.py  compress.py  models.py  session_memory.py
agent/nodes/: __init__.py  executor.py  intake.py  planner.py  reporter.py  skill_router.py  verifier.py
agent/persistence/: __init__.py  db.py  models.py
agent/prompts/: __init__.py  code_explorer.md  common.md  intake.md  planner.md  reporter.md  skill_router.md  verifier.md
agent/rag/: __init__.py  embedder.py  indexer.py  sqlite_store.py  store.py
agent/tools/: code_reader.py  mcp_client.py
data/source-code/: architecture-index.md
mcp/: config.py  security.py  server.py
mcp/db/: __init__.py  client.py  sql_guard.py  tools.py
mcp/sls/: __init__.py  client.py  query_builder.py  tools.py
skills/: S02_timeout.md  S04_protocol.md  S05_endpoint.md  S07_upstream.md
tests/eval/: golden.jsonl  runner.py
