[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "tokenhub-agent"
version = "0.1.0"
requires-python = ">=3.10"
dependencies = [
    # MCP server
    "mcp[cli]==1.27.2",
    "aliyun-log-python-sdk==0.9.12",
    "pymysql==1.1.1",
    # Agent 编排（Phase 1 起用）
    "langgraph==0.3.34",
    "langchain-core==0.3.63",
    "anthropic==0.49.0",
    "openai==1.82.0",
    # CLI
    "click==8.1.8",
    "rich==13.9.4",
    "python-dotenv==1.0.1",
    # 持久化
    "sqlalchemy==2.0.41",
    # 向量计算（Phase 3 RAG）
    "numpy>=1.24.0",
    "pyyaml>=6.0",
    "openpyxl>=3.1.0",
]

[project.optional-dependencies]
dev = [
    "pytest==8.3.5",
    "pytest-asyncio==0.24.0",
    "ruff==0.11.13",
    "mypy==1.15.0",
]

[project.scripts]
tokenhub-agent = "agent.cli:main"

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I"]

[tool.hatch.build.targets.wheel]
packages = ["agent", "mcp"]

[tool.mypy]
python_version = "3.10"
strict = false
ignore_missing_imports = true
